# EIBS2.0-Abra-Code-Abra

./: ENV.example  README.md  hardhat.config.cjs  package-lock.json  package.json  tsconfig.json
applets/: Cargo.toml
applets/logger/: Cargo.toml  logger.widl
applets/logger/src/: lib.rs
applets/registry/: Cargo.toml  registry.widl
applets/registry/src/: lib.rs
artifacts/contracts/AppletRegistry.sol/: AppletRegistry.json
artifacts/contracts/ExecutionLogger.sol/: ExecutionLogger.dbg.json  ExecutionLogger.json
cache/: solidity-files-cache.json
contracts/: AppletRegistry.sol  ExecutionLogger.sol
scripts/: deploy.ts
src/abis/: AppletRegistry.json  ExecutionLogger.json
src/app/: layout.tsx  page.tsx
src/app/history/: page.tsx
src/app/marketplace/: page.tsx
src/app/pipeline/: page.tsx
src/components/: AppletCard.tsx  IntroAnimation.tsx  Navbar.tsx  PipelineBuilder.tsx
src/context/: MockDataContext.tsx  Web3Provider.tsx  WeilProvider.tsx
src/hooks/: useAppletRegistry.ts  useExecutionLogger.ts  useWeilLogger.ts  useWeilRegistry.ts
