[workspace]
members = [
   "registry",
   "logger",
]

resolver = "2"

[workspace.dependencies]
weil_rs        = { path = "../wadk-0.1.0/wadk-0.1.0/adk/rust/weil_rs/" }
weil_contracts = { path = "../wadk-0.1.0/wadk-0.1.0/adk/rust/weil_rs/weil_contracts" }
weil_macros    = { path = "../wadk-0.1.0/wadk-0.1.0/adk/rust/weil_rs/weil_macros" }

serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
anyhow = "1.0.98"
