[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
weil_rs = { path = "../../wadk-0.1.0/wadk-0.1.0/adk/rust/weil_rs/" }
weil_macros = { path = "../../wadk-0.1.0/wadk-0.1.0/adk/rust/weil_rs/weil_macros" }
weil_contracts = { path = "../../wadk-0.1.0/wadk-0.1.0/adk/rust/weil_rs/weil_contracts" }

[lib]
crate-type = ["cdylib"]
